mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-tcp
  namespace: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 1883
      targetPort: 1883


---

apiVersion: v1
kind: Service
metadata:
  name: mosquitto-tls
  namespace: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 8883
      targetPort: 8883
    - protocol: TCP
      port: 8884
      targetPort: 8884
